BUG SQUASH!!!!!
Following bugs are squished: AB#697, AB#696, AB#698

Item persistence re-work:

Items can be dropped in new locations,you can also pick up mulitple items.